2009-08-26  Andreas Schwab  <schwab@linux-m68k.org>

	* emacs-lisp/bytecomp.el (byte-compile-lapcode): Signal overflow.

2009-08-25  Michael Albinus  <michael.albinus@gmx.de>

	* simple.el (process-file-side-effects): New defvar.

	* dired-aux.el (dired-show-file-type):
	* vc.el (vc-diff-internal):
	* vc-arch.el (vc-arch-diff):
	* vc-bzr.el (vc-bzr-sha1, vc-bzr-revision-completion-table):
	* vc-cvs.el (vc-cvs-state, vc-cvs-diff, vc-cvs-revision-table):
	* vc-git.el (vc-git-registered, vc-git-working-revision)
	(vc-git-find-revision, vc-git-diff, vc-git-revision-table)
	(vc-git--empty-db-p):
	* vc-hooks.el (vc-user-login-name):
	* vc-svn.el (vc-svn-registered, vc-svn-state)
	(vc-svn-dir-extra-headers, vc-svn-find-revision):
	* progmodes/grep.el (grep-probe): Let-bind
	`process-file-side-effects' with nil.

	* net/dbus.el (dbus-ping): Add optional parameter TIMEOUT.

	* net/tramp-gvfs.el (top): Use timeout of 100 msec pinging GVFS
	daemon.  Replace ping by checking for running service for bluez
	and zeroconf.  (Bug#4239)

2009-08-25  Kevin Ryde  <user42@zip.com.au>

	* net/dig.el (dig): Add autoload cookie.

2009-08-25  Glenn Morris  <rgm@gnu.org>

	* emacs-lisp/bytecomp.el (byte-compile-eval): Fix test for cl in
	load-history for absolute file-names.
	(byte-compile-file-form-require): Warn about use of the cl package.

	* format.el (format-alist): Doc fix.

	* play/bubbles.el (top-level): Don't require cl at run-time.

	* progmodes/verilog-mode.el (top-level): Don't require lucid (and hence
	run-time cl).

2009-08-24  Dmitry Dzhus  <dima@sphinx.net.ru>

	* progmodes/gdb-mi.el (gdb-mapcar*): Replacement for `mapcar*'
	from cl package.
	(gdb-table-add-row, gdb-table-string): Use `gdb-mapcar*'.

2009-08-24  Jay Belanger  <jay.p.belanger@gmail.com>

	* calc/calc-alg.el (math-trig-rewrite)
	(math-hyperbolic-trig-rewrite): New functions.
	(calc-simplify): Simplify trig functions when asked.

2009-08-24  Stefan Monnier  <monnier@iro.umontreal.ca>
