@@ -1,3 +1,8 @@
+2009-08-26  Glenn Morris  <rgm@gnu.org>
+
+	* bindings.el (standard-mode-line-format): Reposition dashes in
+	which-func entry.  (Bug#4217)
+
 2009-08-26  Andreas Schwab  <schwab@linux-m68k.org>
 
 	* emacs-lisp/bytecomp.el (byte-compile-lapcode): Signal overflow.
